--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,12 +19,12 @@ services:
     networks:
       - net
 
-  urban_server:
-    build: ./urban_server
+  server:
+    build: ./server
     # entrypoint: ["./wait-for-it.sh", "chromadb:8000", "--", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
     volumes:
-      - ./urban_server:/urban_server/
-      - ./urban_server/user_db:/user_db
+      - ./server:/server/
+      - ./server/user_db:/user_db
     ports:
       - 8001:8001
     environment:
@@ -40,12 +40,14 @@ services:
       - net
 
   tg_bot:
-    build: ./tg_urban_bot
+    build: ./tg_bot
+    volumes:
+      - ./tg_bot:/tg_bot
     environment:
-      - SERVER_URL=http://urban_server:8001
+      - SERVER_URL=http://server:8001
     env_file:
       - ./.env
     depends_on:
-      - urban_server
+      - server
     networks:
       - net
